2004-01-14  Ulrich Drepper  <drepper@redhat.com>

	* init.c (pthread_funtions): Make array const.

2004-01-13  Ulrich Drepper  <drepper@redhat.com>

	* allocatestack.c (__make_stacks_executable): Change interface.
	Check parameters.  Pass parameter on to libc counterpart.
	* pthreadP.h: Change declaration.

2004-01-13  Richard Henderson  <rth@redhat.com>

	* pthread_attr_setstack.c (__old_pthread_attr_setstack): Use
	prototype form.
	* pthread_attr_setstacksize.c (__old_pthread_attr_setstacksize):
	Likewise.

	* sysdeps/alpha/Makefile: New file.
	* sysdeps/alpha/tcb-offsets.sym: New file.
	* sysdeps/unix/sysv/linux/alpha/sysdep-cancel.h (SINGLE_THREAD_P):
	Use MULTIPLE_THREADS_OFFSET to implement !libpthread !libc version.

	* sysdeps/unix/sysv/linux/alpha/lowlevellock.h: Rewrite based
	on powerpc version.

2004-01-08  Jakub Jelinek  <jakub@redhat.com>

	* Makefile (tests): Add tst-backtrace1.
	* tst-backtrace1.c: New test.

2003-12-11  Ulrich Weigand  <uweigand@de.ibm.com>

	* sysdeps/alpha/tls.h (DB_THREAD_SELF): Pass bit size of thread
	register as second parameter to the REGISTER macro.
	* sysdeps/ia64/tls.h (DB_THREAD_SELF): Likewise.
	* sysdeps/powerpc/tls.h (DB_THREAD_SELF): Likewise.
	* sysdeps/sh/tls.h (DB_THREAD_SELF): Likewise.
	* sysdeps/sparc/tls.h (DB_THREAD_SELF): Likewise.
	* sysdeps/s390/tls.h (DB_THREAD_SELF): Pass __WORDSIZE as bit size
	of thread register as second parameter to REGISTER macro in 64 case.

2004-01-03  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/Makefile (CFLAGS-getpid.c): Removed.
	(CFLAGS-getpid.o): Defined.
	(CFLAGS-getpid.os): Defined.

2003-12-31  Ulrich Drepper  <drepper@redhat.com>

	* pthread_getattr_np.c (pthread_getattr_np): Make sure stack info
	returned for main thread does not overlap with any other VMA.
	Patch by Jakub Jelinek.

2003-12-29  Jakub Jelinek  <jakub@redhat.com>

	* tst-raise1.c: Include stdio.h.

2003-12-23  Jakub Jelinek  <jakub@redhat.com>
